Revert "feat: Add PWA support and improve service worker functionality - Add service worker with offline support - Add manifest.json for PWA configuration - Add app icons and screenshots - Improve error handling and logging - Update HTML structure for better PWA support"
This reverts commit 07e75de5a11c3bc3f8eb68deaa8ae5e1bfd2eb49.

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,11 +1,11 @@
 {
   "name": "Moon Sighting App",
   "short_name": "MoonSight",
-  "description": "Track moon visibility and receive notifications for moon sightings",
+  "description": "Track moon visibility and receive notifications for optimal moon sighting opportunities",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#2c3e50",
-  "theme_color": "#3498db",
+  "theme_color": "#2c3e50",
   "icons": [
     {
       "src": "/images/icon-192x192.png",
