--- a/vercel.json
+++ b/vercel.json
@@ -16,8 +16,12 @@
       "dest": "server.js"
     },
     {
-      "src": "/(.*)",
+      "src": "/(.*\\.(js|css|html|png|jpg|jpeg|gif|ico|svg|json))",
       "dest": "public/$1"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "server.js"
     }
   ]
 } 
